--- a/waterblast-automation/scs-tank-cleaner.html
+++ b/waterblast-automation/scs-tank-cleaner.html
@@ -27,21 +27,21 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/scs-01.jpg" alt="SCS high flow tank cleaner">
-            <img class="ms-thumb" src="/assets/img/product/thumb-scs-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/scs-04.jpg" alt="SCS high flow tank cleaner">
+            <img class="ms-thumb" src="/assets/img/product/thumb-scs-04.jpg" alt="thumb">
 <!--              <a data-type="video" href="https://www.youtube.com/embed/OUiqrv8elCA"> </a>-->
-          </div>
-          <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/scs-02.jpg" alt="SCS high flow tank cleaner">
-            <img class="ms-thumb" src="/assets/img/product/thumb-scs-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/scs-03.jpg" alt="SCS high flow tank cleaner">
             <img class="ms-thumb" src="/assets/img/product/thumb-scs-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/scs-04.jpg" alt="SCS high flow tank cleaner">
-            <img class="ms-thumb" src="/assets/img/product/thumb-scs-04.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/scs-02.jpg" alt="SCS high flow tank cleaner">
+            <img class="ms-thumb" src="/assets/img/product/thumb-scs-02.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/scs-01.jpg" alt="SCS high flow tank cleaner">
+            <img class="ms-thumb" src="/assets/img/product/thumb-scs-01.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@ master-slider: yes
       
       <p class="product-description promo-heading"><em>Available in 2017</em></p>
 
-      <p class="product-description">The new StoneAge SCS High Flow Tank Cleaner has been engineered to deliver high flow and controlled rotation for optimal cleaning of medium to large tanks and vessels. </p>
+      <p class="product-description">The StoneAge SCS High Flow Tank Cleaner has been engineered to deliver high flow and controlled rotation for optimal cleaning of medium to large tanks and vessels. </p>
       <p>The SCS has a unique adjustable, speed controlled swivel that allows the operator to regulate rotation speed between 5 and 50 rpm while delivering up to 300 gpm (1136 lpm). This combination of high flow and slow rotation is ideal for removing difficult materials such as coke or refractory.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
