--- a/waterblast-automation/scs-tank-cleaner.html
+++ b/waterblast-automation/scs-tank-cleaner.html
@@ -97,37 +97,117 @@ master-slider: yes
           </div>
           <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="panel-body">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Tool Model</th>
-                  <td colspan="2">SCS</td>
-                </tr>
-                <tr>
-                  <th>Pressure Range</th>
-                  <td>10-22k psi</td>
-                  <td><span class="metric">690–1500 bar</span></td>
-                </tr>
-                <tr>
-                  <th>Flow Range</th>
-                  <td>40-300 gpm</td>
-                  <td><span class="metric">151–1136 l/min</span></td>
-                </tr>
-                <tr>
-                  <th>Inlet Connection</th>
-                  <td colspan="2">1 MP (MP16), 1 NPT (P16), 1.25 NPT (P20)</td>
-                </tr>
-                <tr>
-                  <th>Rotation Speed</th>
-                  <td colspan="2">5-50 rpm</td>
-                </tr>
-                <tr>
-                  <th>Weight*</th>
-                  <td>12 lb</td>
-                  <td><span class="metric">5 kg</span></td>
-                </tr>
-              </tbody>
-              </table>
+              <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#p20" aria-controls="p20" role="tab" data-toggle="tab">SCS-P20</a></li>
+                <li role="presentation"><a href="#p16" aria-controls="p16" role="tab" data-toggle="tab">SCS-P16</a></li>
+                <li role="presentation"><a href="#mp16" aria-controls="mp16" role="tab" data-toggle="tab">SCS-MP16</a></li>
+              </ul>
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <!-- SCS-P20 -->
+                <div role="tabpanel" class="tab-pane active" id="p20">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">SCS-P20</td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Pressure</th>
+                      <td>12k psi</td>
+                      <td><span class="metric">830 bar</span></td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Flow</th>
+                      <td>300 gpm</td>
+                      <td><span class="metric">1136 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">1 MP (MP16), 1 NPT (P16), 1.25 NPT (P20)</td>
+                    </tr>
+                    <tr>
+                      <th>Rotation Speed</th>
+                      <td colspan="2">4-60 rpm</td>
+                    </tr>
+                    <tr>
+                      <th>Weight*</th>
+                      <td>12 lb</td>
+                      <td><span class="metric">5 kg</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+                <!-- SCS-P16 -->
+                <div role="tabpanel" class="tab-pane" id="p16">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">SCS-P16</td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Pressure</th>
+                      <td>12k psi</td>
+                      <td><span class="metric">8300 bar</span></td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Flow</th>
+                      <td>300 gpm</td>
+                      <td><span class="metric">1136 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">1 MP (MP16), 1 NPT (P16), 1.25 NPT (P20)</td>
+                    </tr>
+                    <tr>
+                      <th>Rotation Speed</th>
+                      <td colspan="2">4-60 rpm</td>
+                    </tr>
+                    <tr>
+                      <th>Weight*</th>
+                      <td>12 lb</td>
+                      <td><span class="metric">5 kg</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+                <!-- SCS-MP16 -->
+                <div role="tabpanel" class="tab-pane" id="mp16">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">SCS-MP16</td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Pressure</th>
+                      <td>22k psi</td>
+                      <td><span class="metric">1500 bar</span></td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Flow</th>
+                      <td>200 gpm</td>
+                      <td><span class="metric">757 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">1 MP (MP16), 1 NPT (P16), 1.25 NPT (P20)</td>
+                    </tr>
+                    <tr>
+                      <th>Rotation Speed</th>
+                      <td colspan="2">4-60 rpm</td>
+                    </tr>
+                    <tr>
+                      <th>Weight*</th>
+                      <td>12 lb</td>
+                      <td><span class="metric">5 kg</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+              </div>
               <small class="grey">*Swivel only, no head</small>
             </div>
           </div>
