--- a/waterblast-automation/scs-tank-cleaner.html
+++ b/waterblast-automation/scs-tank-cleaner.html
@@ -64,7 +64,7 @@ master-slider: yes
       <p class="product-description promo-heading"><em>Available in 2017</em></p>
 
       <p class="product-description">The StoneAge SCS High Flow Tank Cleaner has been engineered to deliver high flow and controlled rotation for optimal cleaning of medium to large tanks and vessels. </p>
-      <p>The SCS has a unique adjustable, speed controlled swivel that allows the operator to regulate rotation speed between 5 and 50 rpm while delivering up to 300 gpm (1136 lpm). This combination of high flow and slow rotation is ideal for removing difficult materials such as coke or refractory.</p>
+      <p>The SCS has a unique adjustable, speed controlled swivel that allows the operator to regulate rotation speed between 4 and 60 rpm while delivering up to 300 gpm (1136 lpm). This combination of high flow and slow rotation is ideal for removing difficult materials such as coke or refractory.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -260,7 +260,7 @@ master-slider: yes
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
       </div><!-- end accordion -->
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/custom-solutions" class="btn btn-lg btn-block contact" role="button">Contact Solutions for Availability</a>
 
   </div>
   <!-- End Product Info -->
