--- a/waterblast-automation/scs-tank-cleaner.html
+++ b/waterblast-automation/scs-tank-cleaner.html
@@ -253,6 +253,10 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
+        <a href="/bjv"><img class="img-responsive" src="/assets/img/product/thumb-bjv-03.jpg" alt="BJV 2D pipe and tank cleaning">
+        <h5>BJV</h5></a>
+      </div>
+      <div class="item">
         <a href="/sm-air"><img class="img-responsive" src="/assets/img/product/thumb-sm-air-01.jpg" alt="SM-AIR large tank cleaner">
         <h5>SM-Air</h5></a>
       </div>
