--- a/waterblast-automation/scs-tank-cleaner.html
+++ b/waterblast-automation/scs-tank-cleaner.html
@@ -61,7 +61,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description promo-heading"><em>Available in 2017</em></p>
+      <p class="product-description promo-heading"><em>New for 2017</em></p>
 
       <p class="product-description">The StoneAge SCS High Flow Tank Cleaner has been engineered to deliver high flow and controlled rotation for optimal cleaning of medium to large tanks and vessels. </p>
       <p>The SCS has a unique adjustable, speed controlled swivel that allows the operator to regulate rotation speed between 4 and 60 rpm while delivering up to 300 gpm (1136 lpm). This combination of high flow and slow rotation is ideal for removing difficult materials such as coke or refractory.</p>
