finish sewer accessories

--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@ permalink: /
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <div class="testimonial">
-        <p>"We recognize StoneAge as a long term business partner. 
-The products we purchase are of the highest specification from a technical, quality, and health &amp; safety perspective."</p>
+        <p>"We recognize StoneAge as a long term business partner. The products we purchase are of the highest specification from a technical, quality, and health &amp; safety perspective."</p>
         <p class="attrib">- Andrew Dobson, Veolia</p>
         <img src="assets/img/logo_veolia.png" alt="Veolia">
       </div>
