--- a/sewer-tools-nozzles/manhole-cleaner.html
+++ b/sewer-tools-nozzles/manhole-cleaner.html
@@ -22,7 +22,7 @@ master-slider: yes
 <!-- Product Intro -->
 <main class="container stoneage-product padding-tb-30">
   <div class="row">
-    <div class="col-md-5 margin-bottom-30">
+    <div class="col-md-5">
 
       <!-- Master Slider -->
       <div class="ms-showcase2-template">
@@ -49,7 +49,12 @@ master-slider: yes
       
       <h3>Turn your Warthog pipe cleaning tool into an effective Manhole Cleaner</h3>
       <p class="product-description">The benefit of using this design is that the jets are directed at the manhole walls at all times which makes it much more effective and safer than 3D tools.</p>
-      <p>The conversion is simple and requires exchanging the standard WG 040 head with our Manhole Cleaner head kits. The head conversion kits include a head with 1/2” extension arms and nozzles.  We recommend the use of manhole cover plates for increased safety.</p>
+      <p>The conversion is simple and requires exchanging the standard head with our Manhole Cleaner head kits. The head conversion kits include a head with 1/2” extension arms and nozzles.  We recommend the use of manhole cover plates for increased safety.</p>
+      
+      <h2>Features</h2>
+      <ul class="feature-list">
+        <li>Extensions and configuration options available</li>
+      </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
@@ -59,7 +64,121 @@ master-slider: yes
 </main>
 <!-- End Product Intro -->
 
+<!-- Product tabs -->
+<section>
+  <div class="tabs tabs-style-bar">
+      <nav>
+          <ul>
+            <li><a href="#section-bar-1"><span>WGR Magnum Manhole Cleaner</span></a></li>
+            <li><a href="#section-bar-2"><span>WG-1 Manhole Cleaner</span></a></li>
+          </ul>
+      </nav>
+      <div class="content-wrap">
+        <!-- Specs -->
+        <section id="section-bar-1">
+          <div class="col-sm-5"> <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+              <li role="presentation" class="active"><a href="#wg18" aria-controls="wg18" role="tab" data-toggle="tab">WGR-MH-PKG</a></li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+              <!-- WGR -->
+              <div role="tabpanel" class="tab-pane active" id="wg18">
+                <table class="table specs table-hover">
+                <tbody>
+                  <tr>
+                    <th>Tool Compatibility</th>
+                    <td colspan="2"><a href="/wgr-magnum">WGR Magnum</a></td>
+                  </tr>
+                  <tr>
+                    <th>Manhole Diameter</th>
+                    <td>24 in.</td>
+                    <td><span class="metric">610 mm</span>
+                  </tr>
+                </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+          <aside class="col-sm-3 col-sm-offset-4 aside-box">
+            <h3>Need Support?</h3>
+            <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+            <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+          </aside>
+        </section>
 
+        <!-- WG Specs -->
+        <section id="section-bar-2">
+          <div class="col-sm-6">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+              <li role="presentation" class="active"><a href="#wg18" aria-controls="wg18" role="tab" data-toggle="tab">WG-MH-18-PKG</a></li>
+              <li role="presentation"><a href="#wg24" aria-controls="wg24" role="tab" data-toggle="tab">WG-MH-24-PKG</a></li>
+              <li role="presentation"><a href="#wg36" aria-controls="wg36" role="tab" data-toggle="tab">WG-MH-36-PKG</a></li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+              <!-- WG-18 -->
+              <div role="tabpanel" class="tab-pane active" id="wg18">
+                <table class="table specs table-hover">
+                <tbody>
+                  <tr>
+                    <th>Tool Compatibility</th>
+                    <td colspan="2"><a href="/wg">WG-1</a></td>
+                  </tr>
+                  <tr>
+                    <th>Manhole Diameter</th>
+                    <td>18 in.</td>
+                    <td><span class="metric">457 mm</span>
+                  </tr>
+                </tbody>
+                </table>
+              </div>
+              <!-- WG-24 -->
+              <div role="tabpanel" class="tab-pane" id="wg24">
+                <table class="table specs table-hover">
+                <tbody>
+                  <tr>
+                    <th>Tool Compatibility</th>
+                    <td colspan="2"><a href="/wg">WG-1</a></td>
+                  </tr>
+                  <tr>
+                    <th>Manhole Diameter</th>
+                    <td>24 in.</td>
+                    <td><span class="metric">610 mm</span>
+                  </tr>
+                </tbody>
+                </table>
+              </div>
+              <!-- WG-36 -->
+              <div role="tabpanel" class="tab-pane" id="wg36">
+                <table class="table specs table-hover">
+                <tbody>
+                  <tr>
+                    <th>Tool Compatibility</th>
+                    <td colspan="2"><a href="/wg">WG-1</a></td>
+                  </tr>
+                  <tr>
+                    <th>Manhole Diameter</th>
+                    <td>36 in.</td>
+                    <td><span class="metric">914 mm</span>
+                  </tr>
+                </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+          <aside class="col-sm-3 col-sm-offset-3 aside-box">
+            <h3>Need Support?</h3>
+            <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+            <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+          </aside>
+        </section>
+
+      </div><!-- /content -->
+  </div><!-- /tabs -->
+</section>
+<!-- End Product tabs -->
 
 <!-- Related Items -->
 <section class="related container padding-tb-30 margin-bottom-60">
