--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -314,7 +314,7 @@ landing: yes
         
         <div class="mix accessories" data-name="centralizers">
           <a href="/warthog-centralizers" class="search-text">
-            <img src="/assets/img/product/warthog-super-centralizer_02.jpg" class="img-responsive" />
+            <img src="/assets/img/product/warthog-wheeled-centralizer-02.jpg" class="img-responsive" />
             <h3>Centralizers</h3>
             <h5>Maximize cleaning effectiveness</h5>
             <table class="table">
@@ -324,6 +324,25 @@ landing: yes
                 </tr>
                 <tr>
                   <td colspan="2" style="text-align:center;">Several options available</td>
+                </tr>
+              </tbody>
+            </table>
+            <button>View Details</button>
+          </a>
+        </div>
+        
+        <div class="mix accessories" data-name="descalers">
+          <a href="/warthog-descalers" class="search-text">
+            <img src="/assets/img/product/wgp-descaler-01.jpg" class="img-responsive" />
+            <h3>Descaling Heads</h3>
+            <h5>Optimize jetting power</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th colspan="2" style="text-align:center;">Optimized jet pattern for polishing and descaling</th>
+                </tr>
+                <tr>
+                  <td colspan="2" style="text-align:center;">Available for multiple inlets</td>
                 </tr>
               </tbody>
             </table>
