--- a/sewer-tools-nozzles/warthog-ws.html
+++ b/sewer-tools-nozzles/warthog-ws.html
@@ -69,7 +69,7 @@ master-slider: yes
         <li><strong>Controlled rotation</strong> &mdash; Slower dwell time allows jets to penetrate deeper through deposits</li>
         <li><strong>Multiple head options</strong> &mdash; Customize tool for unplugging, descaling or manhole cleaning</li>
         <li><strong>Highest quality jets</strong> &mdash; Hardened stainless steel orifices resist cracking and scratching</li>
-        <li>Optional descaling head available</li>
+        <li>Optional <a href="/warthog-descalers">descaling head available</a></li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
@@ -109,8 +109,8 @@ master-slider: yes
                 <tr>
                   <th>Pipe Size</th>
                   <td>4-8 in.</td>
-                  <td><span class="metric">102-204 mm</span
-                ></tr>
+                  <td><span class="metric">102-204 mm</span>
+                </tr>
                 <tr>
                   <th>Pressure Range</th>
                   <td>1500–5k psi</td>
