--- a/sewer-tools-nozzles/warthog-centralizers.html
+++ b/sewer-tools-nozzles/warthog-centralizers.html
@@ -88,7 +88,7 @@ master-slider: yes
 
           <!-- Poly-fin specs -->
           <section id="section-bar-1">
-            <div class="col-sm-6">
+            <div class="col-sm-5">
               <table class="table specs table-hover">
               <tbody>
                 <tr>
@@ -98,7 +98,11 @@ master-slider: yes
                 <tr>
                   <th>Skid Sizes</th>
                   <td>6, 8, 10, 12 in.</td>
-                  <td><span class="metric">152, 203, 254, 305 mm</span>
+                  <td><span class="metric">152, 203, 254,<br>305 mm</span>
+                </tr>
+                <tr>
+                  <th>Inlet Size</th>
+                  <td colspan="2">1 NPT</td>
                 </tr>
               </tbody>
               </table>
@@ -129,10 +133,14 @@ master-slider: yes
                   <td>7 in.</td>
                   <td><span class="metric">178 mm</span>
                 </tr>
+                <tr>
+                  <th>Inlet Size</th>
+                  <td colspan="2">1 NPT</td>
+                </tr>
               </tbody>
               </table>
             </div>
-            <aside class="col-sm-3 col-sm-offset-3 aside-box">
+            <aside class="col-sm-3 col-sm-offset-4 aside-box">
               <h3>Need Support?</h3>
               <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
@@ -162,6 +170,10 @@ master-slider: yes
                       <td>13-36 in.</td>
                       <td><span class="metric">330-915 mm</span>
                     </tr>
+                    <tr>
+                      <th>Inlet Size</th>
+                      <td colspan="2">1 NPT</td>
+                    </tr>
                   </tbody>
                   </table>
                 </div>
@@ -177,6 +189,10 @@ master-slider: yes
                       <th>Diameter</th>
                       <td>16.5-22 in.</td>
                       <td><span class="metric">420-560 mm</span>
+                    </tr>
+                    <tr>
+                      <th>Inlet Size</th>
+                      <td colspan="2">1 NPT</td>
                     </tr>
                   </tbody>
                   </table>
