Rotary Hydro-X launch

--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -65,7 +65,8 @@ permalink: /sewer-tools
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Hydro-Excavation</a>
-            <a href="/hydro-x" class="list-group-item">Hydro-X</a>
+            <a href="/rotary-hydro-x" class="list-group-item">Rotary Hydro-X<span class="label label-warning">New for 2017</span></a>
+            <a href="/fixed-hydro-x" class="list-group-item">Non-Rotary Hydro-X</a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
