--- a/sewer-tools-nozzles/hydro-x-fixed.html
+++ b/sewer-tools-nozzles/hydro-x-fixed.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 page-type: product
-title: StoneAge Hydro-X Nozzles for Hydroexcavation
-permalink: /hydro-x
+title: StoneAge Non-Rotary Hydro-X Nozzles for Hydroexcavation
+permalink: /fixed-hydro-x
 master-slider: yes
 ---
 
@@ -12,7 +12,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/sewer-tools">Sewer Jetting &amp; Hydro-X Nozzles</a></li>
-      <li class="active">Hydro-X</li>
+      <li class="active">Non-Rotary Hydro-X</li>
     </ul> 
   </div>
 </div>
@@ -27,16 +27,16 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hx-05.jpg" alt="Hydro-X tools for hydroexcavation">
-            <img class="ms-thumb" src="../assets/img/product/thumb-hx-05.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hx-08.jpg" alt="Hydro-X tools for hydroexcavation">
+            <img class="ms-thumb" src="/assets/img/product/thumb-hx-08.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hx-07.jpg" alt="Hydro-X tools for hydroexcavation">
-            <img class="ms-thumb" src="../assets/img/product/thumb-hx-07.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hx-12.jpg" alt="Hydro-X tools for hydroexcavation">
+            <img class="ms-thumb" src="/assets/img/product/thumb-hx-12.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hx-06.jpg" alt="Hydro-X tools for hydroexcavation">
-            <img class="ms-thumb" src="../assets/img/product/thumb-hx-06.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hx-06.jpg" alt="Hydro-X tools for hydroexcavation">
+            <img class="ms-thumb" src="/assets/img/product/thumb-hx-06.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -46,17 +46,18 @@ master-slider: yes
     <!-- Product Info -->
     <div class="col-md-6 padding-left-60">
       <div class="product-heading">
-        <h1>Hydro-X</h1>
+        <h1>Non-Rotary Hydro-X</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=StoneAge Hydro-X&body=Check out StoneAge Hydro-X tools: http://www.stoneagetools.com/hydro-x">E-mail link</a></li>
+            <li><a href="mailto:?subject=StoneAge Non-Rotary Hydro-X&body=Check out Non-Rotary StoneAge Hydro-X tools: http://www.stoneagetools.com/fixed-hydro-x">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">Hydro Excavation is a safe alternative for providing access to buried utilities by potholing or trenching with high pressure water. StoneAge now has four options available for different applications.</p>
+      <p class="product-description">Hydro Excavation is a safe alternative for providing access to buried utilities by potholing or trenching with high pressure water.</p>
+      <p>StoneAge Non-Rotary Hydro-X nozzles utilize replaceable 1/8” NPT AP2 Attack Tip nozzles (HX-102/103 models) or a single OCIH 1/4” NPT carbide nozzle (HX-101). Using a single nozzle channels all of your pump's power in one direction for the most digging power, whereas the inline 2 and 3 jet patterns produce a wider spray to trench material faster.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -70,11 +71,9 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <ul>
-                <li>Angled rotating jet pattern on rotary model removes more material and safely cleans around utilities</li>
-                <li>Save labor hours and expensive heavy equipment costs</li>
-                <li>Avoid risks of costly and dangerous damage to existing utilities</li>
-                <li>Replaceable shroud made from UHMW</li>
-                <li>Rebuild kits available</li>
+                <li>Single, double or triple jets — for precise and accurate soil removal</li>
+                <li>1/2” NPT inlet connection to attach to the operating wand</li>
+                <li>High-visibility urethane guard</li>
               </ul>
             </div>
           </div>
@@ -83,7 +82,7 @@ master-slider: yes
           <div class="panel-heading" role="tab" id="headingTwo">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Non-Rotary Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
               </a>
             </h4>
           </div>
@@ -215,64 +214,7 @@ master-slider: yes
             </div>
           </div>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingRHX">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseRHX" aria-expanded="false" aria-controls="collapseRHX">
-                Rotary Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseRHX" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingRHX">
-            <div class="panel-body">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Tool Family</th>
-                  <td colspan="2">Hydro-X</td>
-                </tr>
-                <tr>
-                  <th>Tool Model</th>
-                  <td colspan="2">Rotary Nozzle</td>
-                </tr>
-                <tr>
-                  <th>Maximum Pressure</th>
-                  <td>5k psi</td>
-                  <td><span class="metric">350 bar</span>
-                </tr>
-                <tr>
-                  <th>Flow Range</th>
-                  <td>3–15 gpm</td>
-                  <td><span class="metric">9–58 l/min</span></td>
-                </tr>
-                <tr>
-                  <th>Cone Angle</th>
-                  <td colspan="2">18&deg;</td>
-                </tr>
-                <tr>
-                  <th>Inlet Connection</th>
-                  <td colspan="2">0.5-14 NPT</td>
-                </tr>
-                <tr>
-                  <th>Diameter</th>
-                  <td>1.75 in.</td>
-                  <td><span class="metric">44 mm</span></td>
-                </tr>
-                <tr>
-                  <th>Length</th>
-                  <td>4.2 in.</td>
-                  <td><span class="metric">107 mm</span></td>
-                </tr>
-                <tr>
-                  <th>Weight</th>
-                  <td>1.0 lb</td>
-                  <td><span class="metric">0.5 kg</span></td>
-                </tr>
-              </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
+        
 <!--
         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingThree">
@@ -320,8 +262,8 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/hydro-x_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hydro-X Data Sheet</a></li>
-                <li><a href="../assets/pdf/hydro-x_jetting_chart.pdf" target="_blank"><i class="fa fa-plane"></i> &nbsp;Hydro-X Jetting Chart</a></li>
+                <li><a href="/assets/pdf/data-sheets/non-rotary_hydro-x_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Non-Rotary Hydro-X Data Sheet</a></li>
+                <li><a href="/assets/pdf/hydro-x_jetting_chart.pdf" target="_blank"><i class="fa fa-plane"></i> &nbsp;Non-Rotary Hydro-X Jetting Chart</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -330,7 +272,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
     </div>
   </div>
   <!-- End Product Info -->
@@ -339,6 +281,17 @@ master-slider: yes
 <!-- End Product Main -->
 
 <!-- Related Items -->
+<section class="related container padding-tb-30">
+  <div class="section-heading">
+      <h2>Related Items</h2>
+  </div>
+  <div class="row row-centered">
+    <div class="col-sm-2 col-centered">
+      <a href="/rotary-hydro-x"><img class="img-responsive" src="/assets/img/product/hx-11.jpg" alt="Rotary Hydro-X nozzles">
+      <h5>Rotary Hydro-X</h5></a>
+    </div>
+  </div>
+</section>
 <!-- End Related Items -->
 
 <!-- Product extras -->
@@ -352,7 +305,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/hydro-x_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/non-rotary_hydro-x_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -376,34 +329,34 @@ master-slider: yes
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>We use equipment in the worst environments that you could possibly put them in… Sometimes I can’t see for the life of me how they hold up under these conditions, but they do.</p>
           <p class="signed">-Mike House</p>
         </div>
 -->
-        <img src="../assets/img/sliders/hydro_x_01.jpg" alt="Hydro-X tools for excavating with high pressure water">
+        <img src="/assets/img/sliders/hydro_x_01.jpg" alt="Hydro-X tools for excavating with high pressure water">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/hydro-xers.jpg" alt="Hydro-X tools for excavating with high pressure water">
+        <img src="/assets/img/sliders/hydro-xers.jpg" alt="Hydro-X tools for excavating with high pressure water">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/hydro_X_field.jpg" alt="Hydro-X tools for excavating with high pressure water">
+        <img src="/assets/img/sliders/hydro_X_field.jpg" alt="Hydro-X tools for excavating with high pressure water">
       </div>
 
     </div><!-- End wrapper -->
