--- a/sewer-tools-nozzles/hydro-x-rotary.html
+++ b/sewer-tools-nozzles/hydro-x-rotary.html
@@ -59,7 +59,7 @@ master-slider: yes
       <p class="product-description promo-heading"><em>New for 2017!</em></p>
 
       <p class="product-description">Hydro Excavation is a safe alternative for providing access to buried utilities by potholing or trenching with high pressure water. Save labor hours and expensive heavy equipment costs and avoid risks of costly and dangerous damage to existing utilities.</p>
-      <p>The angled rotating jet pattern of the HX-300 Rotary Hydro-X nozzle reduces undercutting and safely cleans around utilities.</p>
+      <p>The angled rotating jet pattern of the HX-300 Rotary Hydro-X nozzle decreaces jet dwell time and reduces undercutting to safely clean around utilities.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -78,9 +78,9 @@ master-slider: yes
                   &bull; <strong>HXR 610-8:</strong> Intermediate flow for general use<br>
                   &bull; <strong>HXR 610-5:</strong> Lower flow for water savings
                 </li>
+                <li><strong>Fully rebuildable</strong> - inexpensive rebuild kits reduce cost of ownership by extending the life of the tool with minimal maintenance</li>
                 <li>Carbide seat for long nozzle life</li>
                 <li>Replaceable shield cap</li>
-                <li>Fully rebuildable - inexpensive rebuild kits reduce cost of ownership by extending the life of the tool with minimal maintenance</li>
               </ul>
             </div>
           </div>
