--- a/news.html
+++ b/news.html
@@ -17,6 +17,14 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
+          <a href="http://news.stoneagetools.com/scs-tank-cleaner-available"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> SCS High Flow Tank Cleaner Now Available</h4></a>
+          The StoneAge SCS High Flow Tank Cleaner delivers high flow and controlled rotation for cleaning difficult tanks, lines, and vessels.
+          <p class="grey"><small>E-blast &ndash; February 3, 2017</small></p>
+        </div>
+      </div>
+      
+      <div class="media">          
+        <div class="media-body">
           <a href="http://news.stoneagetools.com/welcome-european-team"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> StoneAge Welcomes European Team</h4></a>
           StoneAge is pleased to welcome our newest StoneAge Europe team members: Steve Ellis, Jan van der Wal, and Andrew Birt.
           <p class="grey"><small>E-blast &ndash; January 17, 2017</small></p>
