--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -176,14 +176,21 @@ master-slider: yes
           </ul>
         </div>
 -->
-        <div class="col-sm-4 col">
+        <div class="col-sm-4">
+          <ul class="list-unstyled basic">
+            <h3>Manuals</h3>
+            <li><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L Manual</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
+            <li><a href="/assets/pdf/data-sheets/abx-3l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-3L Data Sheet</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-3L Tool Talk</a></li>
           </ul>
         </div>
 <!--              <aside class="col-sm-3 col-sm-offset-1 aside-box">-->
-        <aside class="col-sm-3 col-sm-offset-5 aside-box">
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
           <h3>Need Support?</h3>
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
