add WHR Switcher

--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -36,7 +36,7 @@ permalink: /sewer-tools
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Large Lines  <span class="small thin">8-36 in./203-914 mm</span></a>
-            <a href="/switcher" class="list-group-item">WGR Switcher<span class="label label-info">6-36"</span><span class="label label-warning">New!</span></a>
+            <a href="/wgr-switcher" class="list-group-item">WGR Switcher<span class="label label-info">6-36"</span></a>
             <a href="/wgr-magnum" class="list-group-item">WGR Magnum<span class="label label-info">6-36"</span></a>
             <a href="/wg" class="list-group-item">WG-1<span class="label label-info">8-36"</span></a>
             <a href="/wgp" class="list-group-item">WGP-1 (Puller)<span class="label label-info">8-36"</span></a>
@@ -46,6 +46,7 @@ permalink: /sewer-tools
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Medium Lines  <span class="small thin">6-18 in./152-457 mm</span></a>
+            <a href="/whr-switcher" class="list-group-item">WHR Switcher<span class="label label-info">6-18"</span><span class="label label-warning">New!</span></a>
             <a href="/whr-magnum" class="list-group-item">WHR Magnum<span class="label label-info">6-18"</span></a>
             <a href="/wh" class="list-group-item">WH-1/2 &amp; WH-3/4<span class="label label-info">6-18"</span></a>
             <a href="/whp" class="list-group-item">WHP-3/4<span class="label label-info">6-18"</span></a>
