--- a/sewer-tools-nozzles/hydro-x-rotary.html
+++ b/sewer-tools-nozzles/hydro-x-rotary.html
@@ -79,6 +79,7 @@ master-slider: yes
                   &bull; <strong>HXR 300-5:</strong> Lower flow for water savings
                 </li>
                 <li><strong>Fully rebuildable</strong> - inexpensive rebuild kits reduce cost of ownership by extending the life of the tool with minimal maintenance</li>
+                <li>Highest quality, cohesive jet for maximum material removal</li>
                 <li>Carbide seat for long nozzle life</li>
                 <li>Replaceable shield cap</li>
               </ul>
@@ -190,7 +191,8 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="/assets/pdf/data-sheets/rotary_hydro-x_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Rotary Hydro-X Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/rotary_hydro-x_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HXR-300 Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/HXR-300_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HXR-300 Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
