--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -57,7 +57,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description promo-heading"><em>Rent Today! Available for purchase in 2017</em></p>
+      <p class="product-description promo-heading"><em>Rent Today!</em></p>
 
       <p class="product-description">The AutoBox ABX-3L is an automated system for hands-free heat exchanger tube cleaning applications. It is designed to run triple, dual, or single flex lance setups with an emphasis on portability, ease of setup, and safety.</p>
 
@@ -161,6 +161,7 @@ master-slider: yes
               <ul>
                 <li><a href="/assets/pdf/data-sheets/abx-3l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-3L Data Sheet</a></li>
                 <li><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-3L Tool Talk</a></li>
+                <li><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-3L Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -169,8 +170,8 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
       
-      <h2 class="text-center">Available For Purchase in 2017</h2>
-      <a href="/rentals" class="btn btn-lg btn-block contact" role="button">Contact Us to RENT TODAY</a>
+<!--      <h2 class="text-center">Available For Purchase in 2017</h2>-->
+      <a href="/rentals" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
 
   </div>
   <!-- End Product Info -->
