--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -43,11 +43,11 @@ permalink: /waterblast-tools-automated-equipment
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Exchanger Cleaning</a>
-            <a href="/abx-3l" class="list-group-item">AutoBox ABX-3L<span class="label label-warning">Coming in 2017</span></a>
+            <a href="/abx-3l" class="list-group-item">AutoBox ABX-3L<span class="label label-warning">New for 2017</span></a>
             <a href="/abx-2l" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a><a href="/lightweight-positioner" class="list-group-item">Lightweight Positioner for AutoBox</a>
-            <a href="/fin-fan-accessory" class="list-group-item">Fin Fan Accessory for AutoBox<span class="label label-warning">New for 2016</span></a>
-            <a href="/hose-containment" class="list-group-item">Hose Containment for AutoBox<span class="label label-warning">New for 2016</span></a>
-            <a href="/autostroke" class="list-group-item">AutoStroke for AutoBox<span class="label label-warning">New for 2016</span></a>
+            <a href="/fin-fan-accessory" class="list-group-item">Fin Fan Accessory for AutoBox<span class="label label-warning">New for 2017</span></a>
+            <a href="/hose-containment" class="list-group-item">Hose Containment for AutoBox<span class="label label-warning">New for 2017</span></a>
+            <a href="/autostroke" class="list-group-item">AutoStroke for AutoBox<span class="label label-warning">New for 2017</span></a>
             <a href="/bundle-blaster" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
             <a href="/rigid-lance-machine" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
           </div>
@@ -55,8 +55,8 @@ permalink: /waterblast-tools-automated-equipment
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Pipe Cleaning</a>
-            <a href="/navigator" class="list-group-item">Navigator<span class="label label-warning">New for 2016</span></a>
-            <a href="/abx-pro" class="list-group-item">AutoBox ABX-PRO<span class="label label-warning">New for 2016</span></a>
+            <a href="/navigator" class="list-group-item">Navigator</a>
+            <a href="/abx-pro" class="list-group-item">AutoBox ABX-PRO</a>
             <a href="/abx-500" class="list-group-item">AutoBox ABX-500<span class="label label-info">Pipes and Vessels</span></a>
             <a href="/id-pipe-cleaner" class="list-group-item">ID Pipe Cleaner</a>
             <a href="/od-pipe-cleaner" class="list-group-item">OD Pipe Cleaner</a>
@@ -65,7 +65,7 @@ permalink: /waterblast-tools-automated-equipment
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Surface Cleaning</a>
-            <a href="/striker" class="list-group-item">Striker<span class="label label-warning">New for 2016</span></a>
+            <a href="/striker" class="list-group-item">Striker<span class="label label-info">Remote Shotgunning</span></a>
             <a href="/floor-cleaner" class="list-group-item">Floor Cleaner</a>
             <a href="/powered-cleaning-heads" class="list-group-item">Powered Rotational Heads</a>
             <a href="/self-rotary-cleaning-heads" class="list-group-item">Self-Rotating Heads</a>
