--- a/index.html
+++ b/index.html
@@ -168,14 +168,12 @@ permalink: /
       <h2>Events</h2>
     </div>
     <div class="row">
-      <a href="https://wwettshow.com/" target="_blank"><img src="/assets/img/thumb/upcoming-events-wwett2017.jpg" class="img-responsive"/ alt="Visit StoneAge at WWETT 2017"></a>
+      <a href="http://info.stoneagetools.com/wwett-2017" target="_blank"><img src="/assets/img/thumb/upcoming-events-wwett2017.jpg" class="img-responsive"/ alt="Visit StoneAge at WWETT 2017"></a>
       <div class="caption">
-<!--
-      <h4><a href="http://info.stoneagetools.com/visit-us-at-wjta-imca-expo-2016">WJTA-IMCA Expo<br><span class="small">November 2-3, 2016<br/>
-          New Orleans, LA</span></a></h4>
-        <p><strong>Visit Us in Booth #903</strong></p>
-        <p>The WJTA-IMCA Expo is the annual tradeshow of the WaterJet Technology Association-Industrial &amp; Municipal Cleaning Association (WJTA-IMCA). The Expo serves the global hydroblasting, vacuum truck, industrial cleaning and waterjet markets.</p>
--->
+        <h4><a href="http://info.stoneagetools.com/wwett-2017">2017 WWETT Show<br><span class="small">February 22-25<br/>
+        Indianapolis, IN</span></a></h4>
+        <p><strong>Visit Us in Booth #5144</strong></p>
+        <p>The WWETT Show - Water &amp; Wastewater Equipment, Treatment &amp; Transport - is the world's largest annual trade show in the environmental service industry. Each year, over 12,000 people gather from all parts of the world to see the latest in equipment and technology, attend education sessions led by the best in the business, and gather for fun with friends and colleagues.</p>
       </div>
     </div>
   </div>
