--- a/index.html
+++ b/index.html
@@ -186,6 +186,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/rotary-hydro-x-available">Rotary Hydro-X Available</a></h4>
+        <p>The new HXR-300 Rotary Hydro-X tool has an angled rotating jet pattern for effective digging and working around utilities.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/best-place-to-work-2016">SCS High Flow Tank Cleaner Now Available</a></h4>
         <p>The StoneAge SCS High Flow Tank Cleaner delivers high flow and controlled rotation for cleaning difficult tanks, lines, and vessels.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
@@ -203,11 +208,6 @@ permalink: /
       <li>
         <h4><a href="http://news.stoneagetools.com/new-regional-sales-managers" target="_blank">Meet Our Newest Regional Sales Managers</a></h4>
         <p>StoneAge is pleased to welcome two new Regional Sales Managers to our outside sales team: Sean Baker and John Graham.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2016</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/sales-org-announcement-dec-2016">StoneAge Sales Organization Announcement</a></h4>
-        <p>CEO, Kerry Siggins, announces changes to StoneAge's global sales structure to improve support to the company's international dealer network and growing global customer base.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2016</small></p>
       </li>
       <li><a href="/news">More news here</a></li>
