--- a/sewer-tools-nozzles/hydro-x-rotary.html
+++ b/sewer-tools-nozzles/hydro-x-rotary.html
@@ -58,8 +58,8 @@ master-slider: yes
       
       <p class="product-description promo-heading"><em>New for 2017!</em></p>
 
-      <p class="product-description">Hydro Excavation is a safe alternative for providing access to buried utilities by potholing or trenching with high pressure water. Save labor hours and expensive heavy equipment costs and avoid risks of costly and dangerous damage to existing utilities.</p>
-      <p>The angled rotating jet pattern of the HXR-300 Rotary Hydro-X nozzle decreaces jet dwell time and reduces undercutting to safely clean around utilities.</p>
+      <p class="product-description">Hydro Excavation is an alternative for providing access to buried utilities by potholing or trenching with high pressure water. Save labor hours and expensive heavy equipment costs and avoid risks of costly and dangerous damage to existing utilities.</p>
+      <p>The angled rotating jet pattern of the HXR-300 Rotary Hydro-X nozzle decreaces jet dwell time and reduces undercutting to efficiently clean around utilities.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -76,7 +76,8 @@ master-slider: yes
                 <li>Three jetting options available for different applicaitons:<br>
                   &bull; <strong>HXR 300-10:</strong> Higher flow for harder surfaces<br>
                   &bull; <strong>HXR 300-8:</strong> Intermediate flow for general use<br>
-                  &bull; <strong>HXR 300-5:</strong> Lower flow for water savings
+                  &bull; <strong>HXR 300-5:</strong> Lower flow for water savings<br>
+                  <em class="grey thin">See manual for jetting</em>
                 </li>
                 <li><strong>Fully rebuildable</strong> - inexpensive rebuild kits reduce cost of ownership by extending the life of the tool with minimal maintenance</li>
                 <li>Highest quality, cohesive jet for maximum material removal</li>
